--- a/client/package.json
+++ b/client/package.json
@@ -22,9 +22,12 @@
     "parcel-bundler": "^1.12.4"
   },
   "dependencies": {
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "memory-cache": "^0.2.0",
     "node-fetch": "^2.6.1",
+    "punkapi-lib": "^2.5.0",
     "vue": "^2.6.12"
   }
 }
